# Prompt-Machine-Ajayakr-prompter-

./: README.md  capture.py  design_style_detector.py  machine.py  ollama.py  prd.md  pyproject.toml  test_ollama.py  vector_kb.py  vector_kb.py.append
Scrapped-Data/: 21dev.txt  aceternityui.txt  animejs.txt  components_components.txt  floatui.com.txt  freefrontend.com.txt  meterialtheme.txt  metrialtheme.txt  pyproject.toml  scroll-animation.txt  splitter.py  v0dev-templates.txt
Scrapped-Data/split-output/: components--cards.txt  components--forms.txt  components--hero.txt  components--tables.txt  design--color-palettes.txt  design--text-animations.txt  layouts--dashboard.txt  layouts--landing-page.txt
archive/files/: README.md  machine.py  ollama.py  pipeline.py  pyproject.toml  stage10_blueprint_output.py  stage1_intent_parser.py  stage2_layout_contract.py  stage3_visual_hierarchy.py  stage5_design_system.py  stage6_layout_skeleton.py  stage7_prompt_generator.py  stage8_code_generator.py  stage9_prompt_refiner.py  vector_kb.py
core/: pipeline.py
data/: uupm_chunks.json
pipeline/: pipeline.py  retrieval_vector_db.py  stage10_blueprint_output.py  stage11_code_validator.py  stage1_intent_parser.py  stage2_ontology_map.py  stage3_layout_planner.py  stage4_blueprint_generator.py  stage4_component_retriever.py  stage5_blueprint_validator.py  stage5_design_system.py  stage6_targeted_retriever.py  stage7_prompt_generator.py  stage8_code_generator.py
tests/: flowsync.md  quizmaster.md  taskflow.md
ui/: dashboard.py
vector-kb/: index.faiss  meta.json
(+298 files in other folders)
