[project]
name = "prompt-machine"
version = "3.0.0"
description = "Frontend Blueprint Engine — PRD to UI Architecture"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
    "textual>=1.0.0",
    "psutil>=6.0.0",
    "rich-pixels>=3.0.1",
]

[project.scripts]
machine = "machine:main"
